# AlumniMap

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  package.nix  result
.cargo/: config.toml
backend/: Cargo.toml
backend/src/: app.rs  handlers.rs  lib.rs  main.rs  routes.rs  server.rs  settings.rs
backend/src/database/models/: mod.rs
config/: development.yaml  example.toml  test.yaml
entity/: Cargo.toml
entity/src/: lib.rs  mod.rs  prelude.rs  profile.rs  university.rs
examples/: playground.rs
frontend/: Cargo.toml  index.html
frontend/assets/: sw.js
frontend/src/: app.rs  fetcher.rs  init.rs  lib.rs  main.rs
frontend/src/widgets/: card.rs  list.rs  map.rs  mod.rs  profile.rs  profile_card.rs  search.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20250427_102012_people.rs  m20250427_102355_university_people.rs  m20250430_111304_universities.rs  m20250430_113500_people.rs  m20250522_121745_create_table_universities.rs  m20250522_122704_create_table_profiles.rs
src/: app.rs
src/controllers/: mod.rs  people.rs  universities.rs
src/models/: mod.rs  people.rs  universities.rs  university_people.rs
src/models/_entities/: mod.rs  people.rs  prelude.rs  universities.rs  university_people.rs
tests/models/: mod.rs  people.rs  users.rs
tests/requests/: auth.rs  mod.rs  people.rs  prepare_data.rs  universities.rs
webapp/: Cargo.toml
webapp/src/: app.rs  main.rs
