[package]
name = "backend"
version = "0.1.0"
authors = ["ckgxrg <ckgxrg@gmail.com>"]
edition = "2021"
publish = false

[lints.clippy]
pedantic = "warn"

[dependencies]
actix-web = "4"
sea-orm = { version = "1.1.11", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
entity = { path = "../entity" }
migration = { path = "../migration" }
serde = { version = "1.0.219" }
serde_json = "1.0.140"
clap = { version = "4.5.38", features = ["derive"] }
actix-files = "0.6.6"
