[package]
name = "backend"
version = "0.1.0"
authors = ["ckgxrg <ckgxrg@gmail.com>"]
edition = "2021"
publish = false

[[bin]]
name = "alumnimap"
path = "src/main.rs"

[lints.clippy]
pedantic = "warn"

[dependencies]
actix-web = "4"
sea-orm = { version = "1.1.11", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
entity = { path = "../entity" }
migration = { path = "../migration" }
serde = { version = "1.0.219" }
serde_json = "1.0.140"
clap = { version = "4.5.38", features = ["derive"] }
actix-files = "0.6.6"
include_dir = "0.7.4"
config = { version = "0.15.11", default-features = false, features = ["toml"] }
rust-embed-for-web = "11.2.1"
actix-web-rust-embed-responder = { version = "2.2.3", default-features = false, features = ["base64", "rust-embed-for-web", "support-rust-embed-for-web"] }
