[package]
name = "backend"
version = "1.0.0"
authors = ["ckgxrg <ckgxrg@gmail.com>"]
edition = "2021"

[[bin]]
name = "alumnimap"
path = "src/main.rs"

[lints.clippy]
pedantic = "warn"

[dependencies]
actix-web = "4"
sea-orm = { version = "1.1.11", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
entity = { path = "../entity" }
migration = { path = "../migration" }
serde = { version = "1.0.219" }
serde_json = "1.0.140"
clap = { version = "4.5.38", features = ["derive"] }
actix-files = "0.6.6"
config = { version = "0.15.11", default-features = false, features = ["toml"] }
rust-embed = "8.7.2"
mime_guess = "2.0.5"
