[package]
name = "frontend"
version = "1.0.0"
authors = ["ckgxrg <ckgxrg@gmail.com>"]
edition = "2021"

[lints.clippy]
pedantic = "warn"

[dependencies]
egui = "0.31"
eframe = { version = "0.31", default-features = false, features = [
    "default_fonts",
    "glow",
    "wayland",
    "x11",
] }
log = "0.4.27"
egui_extras = { version = "0.31.1", features = ["all_loaders"] }
image = "0.25.6"
ehttp = { version = "0.5.0", features = ["json"] }
serde_json = "1.0.140"
entity = { path = "../entity" }
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.70"
catppuccin-egui = { version = "5.5.0", default-features = false, features = ["egui31"] }
