[package]
name = "migration"
version = "1.0.0"
authors = ["ckgxrg <ckgxrg@gmail.com>"]
edition = "2021"

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }

[dependencies.sea-orm-migration]
version = "1.1.0"
features = [
  "runtime-tokio-rustls",
  "sqlx-postgres",
]
